[package]
name = "encoding_derive_helpers"
version = "2.0.0-beta.1"
license = "Apache-2.0"
authors = ["Dr. Maxim Orlovsky <orlovsky@protonmail.ch>"]
description = "Helper functions for creating different encoding derivation macros"
repository = "https://github.com/strict-encoding/encoding_derive_helpers"
homepage = "https://strict-encoding.org"
keywords = ["strict-encoding", "networking", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers", "encoding", "parsing"]
readme = "../README.md"
edition = "2021"
rust-version = "1.60.0"

[lib]

[dependencies]
quote = "1"
syn = "1"
proc-macro2 = "1"
amplify = { version = "4.0.0-beta.6", features = [ "proc_attr" ] }
